<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_action_export"
        android:title="@string/action_export"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_switch_to_selection"
        android:icon="@drawable/ic_action_view_as_grid"
        android:title="@string/action_selection"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        android:showAsAction="never"/>

</menu>
